--- a/App.json
+++ b/App.json
@@ -1,6 +1,6 @@
       [
      {
-           "name": "Malaysia",
+           "name": "MALAYSIA",
             "samples": [
        {
         "name": "TV1",
