--- a/App.json
+++ b/App.json
@@ -1057,7 +1057,7 @@
         "uri": "https://itpolly.iptv.digijadoo.net/live/independent_tv/chunks.m3u8"
       },
       {
-        "name": "Jamuna TV https://iptv.live",
+        "name": "Jamuna TV",
         "uri": "https://itpolly.iptv.digijadoo.net/live/jamuna_tv/chunks.m3u8"
       },
       {
