--- a/App.json
+++ b/App.json
@@ -1113,22 +1113,6 @@
         "uri": "https://itpolly.iptv.digijadoo.net/live/star_world/playlist.m3u8"
       },
       {
-        "name": "Zee TV",
-        "uri": "https://itpolly.iptv.digijadoo.net/live/zee_tv/chunks.m3u8"
-      },
-      {
-        "name": "FOX Life",
-        "uri": "https://itpolly.iptv.digijadoo.net/live/fox_life/chunks.m3u8"
-      },
-      {
-        "name": "History TV",
-        "uri": "https://itpolly.iptv.digijadoo.net/live/history_tv/chunks.m3u8"
-      },
-      {
-        "name": "NAT GEO WILD",
-        "uri": "https://itpolly.iptv.digijadoo.net/live/nat_geo_wild/chunks.m3u8"
-      },
-      {
         "name": "Gaan Bangla",
         "uri": "https://itpolly.iptv.digijadoo.net/live/gaan_bangla/chunks.m3u8"
       },
@@ -1137,17 +1121,25 @@
         "uri": "https://itpolly.iptv.digijadoo.net/live/sangeet_bangla/chunks.m3u8"
       },
       {
-        "name": "Zoom",
-        "uri": "https://itpolly.iptv.digijadoo.net/live/zoom/playlist.m3u8"
-      },
-      {
-        "name": "Zee Bangla",
-        "uri": "https://itpolly.iptv.digijadoo.net/live/zee_bangla/chunks.m3u8"
-      },
-      {
         "name": "GAZI TV",
         "uri": "https://itpolly.iptv.digijadoo.net/live/gazi_tv/chunks.m3u8"
       },
+      {
+        "name": "STAR PLUS HD",
+        "uri": "https://itpolly.iptv.digijadoo.net/live/star_plus_hd/chunks.m3u8"
+      },
+      {
+        "name": "STAR PLUS",
+        "uri": "https://itpolly.iptv.digijadoo.net/live/star_plus/chunks.m3u8"
+      },
+      {
+        "name": "STAR GOLD",
+        "uri": "https://itpolly.iptv.digijadoo.net/live/star_gold/chunks.m3u8"
+      },
+      {
+        "name": "Colors",
+        "uri": "https://itpolly.iptv.digijadoo.net/live/colors_hd/chunks.m3u8"
+      }
 	  {
         "name": "ZEE TV",
         "uri": "https://itpolly.iptv.digijadoo.net/live/zee_tv/chunks.m3u8"
@@ -1161,20 +1153,77 @@
         "uri": "https://itpolly.iptv.digijadoo.net/live/zee_classic/chunks.m3u8"
       },
       {
-        "name": "STAR PLUS HD",
-        "uri": "https://itpolly.iptv.digijadoo.net/live/star_plus_hd/chunks.m3u8"
+        "name": "ZEE BANGLA",
+        "uri": "https://itpolly.iptv.digijadoo.net/live/zee_bangla/chunks.m3u8"
       },
       {
-        "name": "STAR PLUS HD",
-        "uri": "https://itpolly.iptv.digijadoo.net/live/star_plus/chunks.m3u8"
-      },
-      {
-        "name": "STAR GOLD",
-        "uri": "https://itpolly.iptv.digijadoo.net/live/star_gold/chunks.m3u8"
-      },
-      {
-        "name": "Colors",
-        "uri": "https://itpolly.iptv.digijadoo.net/live/colors_hd/chunks.m3u8"
+        "name": "ZOOM",
+        "uri": "https://itpolly.iptv.digijadoo.net/live/zoom/playlist.m3u8"
       }
+    ]
+  },
+  {
+    "name": "CHINA CCTV",
+            "samples": [
+       {
+        "name": "CCTV-4K",
+        "uri": "http://180.97.123.180/sk.live.otvcloud.com/otv/skcc/live/channel51021/2300.m3u8"
+      },
+      {
+        "name": "CCTV-1",
+        "uri": "http://111.40.205.73/PLTV/88888888/224/3221225755/index.m3u8"
+      },
+      {
+        "name": "CCTV-2",
+        "uri": "http://ottrrs.hl.chinamobile.com/PLTV/88888888/224/3221225747/index.m3u8"
+      },
+      {
+        "name": "CCTV-3",
+        "uri": "http://111.40.205.73/wh7f454c46tw1287084215_925233335/PLTV/88888888/224/3221225606/index.m3u8"
+      },
+      {
+        "name": "CCTV-4",
+        "uri": "http://39.134.157.203/PLTV/88888888/224/3221225641/index.m3u8"
+      },
+      {
+        "name": "CCTV-6",
+        "uri": "http://111.40.205.73/wh7f454c46tw1287084215_925233335/PLTV/88888888/224/3221225607/index.m3u8"
+      },
+      {
+        "name": "CCTV-7",
+        "uri": "http://111.40.205.73/wh7f454c46tw1287084215_925233335/PLTV/88888888/224/3221225733/index.m3u8"
+      },
+      {
+        "name": "CCTV-8",
+        "uri": "http://111.40.205.73/wh7f454c46tw1287084215_925233335/PLTV/88888888/224/3221225608/index.m3u8"
+      },
+      {
+        "name": "CCTV-9",
+        "uri": "http://111.40.205.76/PLTV/88888888/224/3221225734/index.m3u8"
+      },
+      {
+        "name": "CCTV-10",
+        "uri": "http://111.40.205.76/PLTV/88888888/224/3221225730/index.m3u8"
+      },
+      {
+        "name": "CCTV-11",
+        "uri": "http://39.134.157.203/PLTV/88888888/224/3221225622/index.m3u8"
+      },
+      {
+        "name": "CCTV-12",
+        "uri": "http://111.40.205.76/PLTV/88888888/224/3221225731/index.m3u8"
+      },
+      {
+        "name": "CCTV-14",
+        "uri": "http://111.40.205.76/PLTV/88888888/224/3221225732/index.m3u8"
+      },
+      {
+        "name": "CCTV-15",
+        "uri": "http://39.134.157.199/PLTV/88888888/224/3221225610/index.m3u8"
+      },
+      {
+        "name": "CCTV-17",
+        "uri": "http://112.50.243.5/PLTV/88888888/224/3221226990/1.m3u8"
+      },
     ]
   }
