--- a/App.json
+++ b/App.json
@@ -1163,9 +1163,9 @@
     ]
   },
   {
-    "name": "CHINA CCTV",
-            "samples": [
-       {
+    "name": "CHINA",
+    "samples": [
+      {
         "name": "CCTV-4K",
         "uri": "http://180.97.123.180/sk.live.otvcloud.com/otv/skcc/live/channel51021/2300.m3u8"
       },
