--- a/App.json
+++ b/App.json
@@ -333,6 +333,30 @@
         "drm_license_url": "http://1.9.58.113:8063/?deviceId=NWE2YzliZTQtMWYwYS0zNjdiLWI2ZWQtZTY1MmQzZGE5YTQw"
       },
       {
+        "name": "HBO multi",
+        "uri": "https://liveorigin01.hbogoasia.com:8443/origin/live/main/HBO/index.m3u8"
+      },
+      {
+        "name": "HBO HITS multi",
+        "uri": "https://liveorigin01.hbogoasia.com:8443/origin/live/main/HITS/index.m3u8"
+      },
+      {
+        "name": "HBO FAMILY multi",
+        "uri": "https://liveorigin01.hbogoasia.com:8443/origin/live/main/FAMILY/index.m3u8"
+      },
+      {
+        "name": "HBO SIGNATURE multi",
+        "uri": "https://liveorigin01.hbogoasia.com:8443/origin/live/main/SIG/index.m3u8"
+      },
+      {
+        "name": "RED BY HBO multi",
+        "uri": "https://liveorigin01.hbogoasia.com:8443/origin/live/main/RED/index.m3u8"
+      },
+      {
+        "name": "CINEMAX multi",
+        "uri": "https://liveorigin01.hbogoasia.com:8443/origin/live/main/MAX/index.m3u8"
+      },
+      {
         "name": "FOX MOVIES",
         "uri": "http://1.9.62.158/PLTV/88888888/224/3221227572/3221227572.mpd",
         "drm_scheme": "widevine",
