--- a/App.json
+++ b/App.json
@@ -4,13 +4,13 @@
             "samples": [
        {
         "name": "TV1",
-        "uri": "http://1.9.62.158/PLTV/88888888/224/3221227709/3221227709.mpd",
+        "uri": "https://rtm1mobile.secureswiftcontent.com/Origin01/ngrp:RTM1/playlist.m3u8",
         "drm_scheme": "widevine",
         "drm_license_url": "http://1.9.58.113:8063/?deviceId=NWE2YzliZTQtMWYwYS0zNjdiLWI2ZWQtZTY1MmQzZGE5YTQw"
       },
       {
         "name": "TV2",
-        "uri": "http://1.9.62.158/PLTV/88888888/224/3221227712/3221227712.mpd",
+        "uri": "https://rtm2mobile.secureswiftcontent.com/Origin01/ngrp:RTM1/playlist.m3u8",
         "drm_scheme": "widevine",
         "drm_license_url": "http://1.9.58.113:8063/?deviceId=NWE2YzliZTQtMWYwYS0zNjdiLWI2ZWQtZTY1MmQzZGE5YTQw"
       },
@@ -44,15 +44,15 @@
       },
       {
         "name": "HELLO",
-        "uri": "https://fvtv.mywire.org/playlist/9uhgasgstp-bfxkgv0t8s.m3u8"
+        "uri": "https://agsplayback01.astro.com.my/CH1/master_HELLOGOSHOP6.m3u8"
       },
       {
         "name": "NAURA",
-        "uri": "https://fvtv.mywire.org/playlist/uwn5qna2wm-qywbpjhcrm.m3u8"
+        "uri": "https://agsplayback01.astro.com.my/CH2/master_NAURAGOSHOP4.m3u8"
       },
       {
         "name": "OKEY",
-        "uri": "https://rtmokeymobile.secureswiftcontent.com/Origin02/ngrp:RTM2/chunklist_b2064000.m3u8"
+        "uri": "https://rtmokeymobile.secureswiftcontent.com/Origin02/ngrp:RTM2/playlist.m3u8"
       },
       {
         "name": "PARLIMEN",
