--- a/App.json
+++ b/App.json
@@ -39,8 +39,24 @@
         "drm_license_url": "http://1.9.58.113:8063/?deviceId=NWE2YzliZTQtMWYwYS0zNjdiLWI2ZWQtZTY1MmQzZGE5YTQw"
       },
       {
-        "name": "DRAMA SANGAT",
-        "uri": "https://github.com/exodiver/IPTV/raw/master/M3U8/Token/DramaSangat.m3u8"
+        "name": "WARNA",
+        "uri": "https://delivery.agsgroup.tech/stream/astro_warna/playlist.m3u8?token=FtnuN&v=20200308"
+      },
+      {
+        "name": "RIA",
+        "uri": "https://delivery.agsgroup.tech/stream/astro_ria/playlist.m3u8?token=FtnuN&v=20200308"
+      },
+      {
+        "name": "PRIMA",
+        "uri": "https://delivery.agsgroup.tech/stream/astro_prima/playlist.m3u8?token=FtnuN&v=20200308"
+      },
+      {
+        "name": "OASIS",
+        "uri": "https://delivery.agsgroup.tech/stream/astro_oasis/playlist.m3u8?token=FtnuN&v=20200308"
+      },
+      {
+        "name": "CERIA",
+        "uri": "https://delivery.agsgroup.tech/stream/astro_ceria/playlist.m3u8?token=FtnuN&v=20200308"
       },
       {
         "name": "HELLO",
@@ -299,12 +315,6 @@
         "drm_license_url": "http://1.9.58.113:8063/?deviceId=NWE2YzliZTQtMWYwYS0zNjdiLWI2ZWQtZTY1MmQzZGE5YTQw"
       },
       {
-        "name": "MTV ASIA HD",
-        "uri": "http://1.9.62.158/PLTV/88888888/224/3221227613/3221227613.mpd",
-        "drm_scheme": "widevine",
-        "drm_license_url": "http://1.9.58.113:8063/?deviceId=NWE2YzliZTQtMWYwYS0zNjdiLWI2ZWQtZTY1MmQzZGE5YTQw"
-      },
-      {
         "name": "DREAMWORK HD",
         "uri": "http://1.9.62.158/PLTV/88888888/224/3221227596/3221227596.mpd",
         "drm_scheme": "widevine",
@@ -391,6 +401,18 @@
       {
         "name": "CINEMA WORLD HD",
         "uri": "http://1.9.62.158/PLTV/88888888/224/3221227568/3221227568.mpd",
+        "drm_scheme": "widevine",
+        "drm_license_url": "http://1.9.58.113:8063/?deviceId=NWE2YzliZTQtMWYwYS0zNjdiLWI2ZWQtZTY1MmQzZGE5YTQw"
+      },
+      {
+        "name": "MTV ASIA HD",
+        "uri": "http://1.9.62.158/PLTV/88888888/224/3221227613/3221227613.mpd",
+        "drm_scheme": "widevine",
+        "drm_license_url": "http://1.9.58.113:8063/?deviceId=NWE2YzliZTQtMWYwYS0zNjdiLWI2ZWQtZTY1MmQzZGE5YTQw"
+      },
+      {
+        "name": "MTV LIVE HD",
+        "uri": "https://macan.live/live/macangratisan/1595610899/54.m3u8",
         "drm_scheme": "widevine",
         "drm_license_url": "http://1.9.58.113:8063/?deviceId=NWE2YzliZTQtMWYwYS0zNjdiLWI2ZWQtZTY1MmQzZGE5YTQw"
       },
@@ -790,6 +812,12 @@
       {
         "name": "Crime Investigation",
         "uri": "https://liveanevia.mncnow.id/live/eds/CrimeInvestigation/sa_dash_vmx/CrimeInvestigation.mpd",
+        "drm_scheme": "widevine",
+        "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
+      },
+      {
+        "name": "Smithsonian",
+        "uri": "http://103.47.132.164/PLTV/88888888/224/3221227321/index.m3u8",
         "drm_scheme": "widevine",
         "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
       },      
