--- a/App.json
+++ b/App.json
@@ -1086,5 +1086,40 @@
         "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
       }
     ]
+  },
+  {
+    "name": "SINGAPORE",
+    "samples": [
+      {
+        "name": "SURIA",
+        "uri": "https://d11h6a6nhl9kj9.cloudfront.net/hls/suriactv/master02.m3u8",
+        "drm_scheme": "widevine",
+        "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
+      },
+      {
+        "name": "CHANNEL 5",
+        "uri": "https://dlau142f16b92.cloudfront.net/hls/ch5ctv/master02.m3u8",
+        "drm_scheme": "widevine",
+        "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
+      },
+      {
+        "name": "CHANNEL 8",
+        "uri": "https://d34e90s3s13i7n.cloudfront.net/hls/ch8ctv/master02.m3u8",
+        "drm_scheme": "widevine",
+        "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
+      },
+      {
+        "name": "CHANNEL U",
+        "uri": "https://d3inlz9elsutjl.cloudfront.net/hls/chuctv/master02.m3u8",
+        "drm_scheme": "widevine",
+        "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
+      },
+      {
+        "name": "VASANTHAM",
+        "uri": "https://d39v9xz8f7n8tk.cloudfront.net/hls/vsnthmctv/master02.m3u8",
+        "drm_scheme": "widevine",
+        "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
+      }
+    ]
   }
 ]
